# 2026_04_17_shift_schedule

./: .gitignore  2026-05-21_年度週六值班排班整合計畫.md  2026-05-22_假日值班補休規則整合計畫.md  2026-05-22_多用戶順序選填排班系統改版計畫.md  Year_Month_Schedule_Title.html  goal.html  pyproject.toml  schedule_simulation.html
.codex/skills/git-commit-workflow/: SKILL.md
.codex/skills/goal-html-progress-sync/: SKILL.md
.codex/skills/goal-html-progress-sync/agents/: openai.yaml
app/: __init__.py  main.py  schemas.py
app/api/: deps.py  routes.py
app/core/: config.py
app/db/: init_db.py  models.py  session.py
app/services/: schedule_service.py
doc/: 2026-05-27_規則討論.md
tests/: test_health.py  test_schedule_flow.py
